--- a/blog/templates/errors/404.html
+++ b/blog/templates/errors/404.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+{% load static%}
+
+{% block content %}
 <div class="container-fluid page-general-content">
 	<div class="row">
 		<div class="col-md-7 mx-auto">
@@ -46,3 +50,4 @@
 		</div>
 	</div>
 </div><!-- page-general-content -->
+{% endblock %}
