--- a/templates/partials/bonus.html
+++ b/templates/partials/bonus.html
@@ -4,40 +4,19 @@
 	<div class="row">
 		<div class="col-md-7 mx-auto">
 			<main class="py-3 text-center">
-				<h2 class="mb-3">Fasilitas &amp; Bonus</h2>
+				<h2 class="mb-3">{{item.bonus_title}}</h2>
 				<div class="row">
+					{% for bonus in bonuses %}
 					<div class="col-md-3 col-6 mb-4">
 						<div class="rounded px-3 py-5 bg-white shadow-sm">
 							<div class="mb-3">
-						<img src="{% static 'images/icon.png' %}">
+						<img src="{{bonus.image.url}}">
 							</div>
-							<h5 class="mb-0">Ruang kelas</h5>
+							<h5 class="mb-0">{{bonus.card_title}}</h5>
 						</div>
 					</div><!-- col-md-3 -->
-					<div class="col-md-3 col-6 mb-4">
-						<div class="rounded px-3 py-5 bg-white shadow-sm">
-							<div class="mb-3">
-						<img src="{% static 'images/icon.png' %}">
-							</div>
-							<h5 class="mb-0">Member area</h5>
-						</div>
-					</div><!-- col-md-3 -->
-					<div class="col-md-3 col-6 mb-4">
-						<div class="rounded px-3 py-5 bg-white shadow-sm">
-							<div class="mb-3">
-						<img src="{% static 'images/icon.png' %}">
-							</div>
-							<h5 class="mb-0">Forum privat</h5>
-						</div>
-					</div><!-- col-md-3 -->
-					<div class="col-md-3 col-6 mb-4">
-						<div class="rounded px-3 py-5 bg-white shadow-sm">
-							<div class="mb-3">
-						<img src="{% static 'images/icon.png' %}">
-							</div>
-							<h5 class="mb-0">Merchandise</h5>
-						</div>
-					</div><!-- col-md-3 -->
+					{% endfor %}
+			
 				</div><!-- row -->
 			</main>
 		</div>
