--- a/templates/partials/trainer.html
+++ b/templates/partials/trainer.html
@@ -4,36 +4,17 @@
 	<div class="row">
 		<div class="col-md-7 mx-auto">
 			<main class="py-3 text-center">
-				<h2 class="mb-3">Tim Pengajar</h2>
+				<h2 class="mb-3">{{item.trainer_title}}</h2>
 				<div class="row">
+					{% for trainer in trainers %}
 					<div class="col-md-3 col-6 mb-4">
 						<div class="mb-3">
-						<img src="{% static 'images/icon.png' %}">
+						<img src="{{trainer.image.url}}">
 						</div>
-						<h5 class="mb-0">Aditya</h5>
-						<p class="mb-0 fst-italic">CEO Company <a href="#" class="text-info" target="_blank" rel="nofollow"><i class="bi bi-linkedin"></i></a></p>
+						<h5 class="mb-0">{{trainer.name}}</h5>
+						<p class="mb-0 fst-italic p-2">{{trainer.occupation}}<a href="{{trainer.linkedin}}" class="text-info" target="_blank" rel="nofollow"><i class="bi bi-linkedin"></i></a></p>
 					</div><!-- col-md-3 -->
-					<div class="col-md-3 col-6 mb-4">
-						<div class="mb-3">
-						<img src="{% static 'images/icon.png' %}">
-						</div>
-						<h5 class="mb-0">Adinata</h5>
-						<p class="mb-0 fst-italic">CEO Company <a href="#" class="text-info" target="_blank" rel="nofollow"><i class="bi bi-linkedin"></i></a></p>
-					</div><!-- col-md-3 -->
-					<div class="col-md-3 col-6 mb-4">
-						<div class="mb-3">
-						<img src="{% static 'images/icon.png' %}">
-						</div>
-						<h5 class="mb-0">Akarsana</h5>
-						<p class="mb-0 fst-italic">CEO Company <a href="#" class="text-info" target="_blank" rel="nofollow"><i class="bi bi-linkedin"></i></a></p>
-					</div><!-- col-md-3 -->
-					<div class="col-md-3 col-6 mb-4">
-						<div class="mb-3">
-						<img src="{% static 'images/icon.png' %}">
-						</div>
-						<h5 class="mb-0">Ardiyanto</h5>
-						<p class="mb-0 fst-italic">CEO Company <a href="#" class="text-info" target="_blank" rel="nofollow"><i class="bi bi-linkedin"></i></a></p>
-					</div><!-- col-md-3 -->
+					{% endfor %}
 				</div><!-- row -->
 			</main>
 		</div>
