--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -38,10 +38,29 @@
       </div>
       {% endif %}
     </div>
-				<div class="paging clearfix">
-				  <a href="#" class="btn btn-outline-dark float-start"><i class="bi bi-chevron-left"></i> Prev</a>
-				  <a href="#" class="btn btn-outline-dark float-end">Next <i class="bi bi-chevron-right"></i></a>
-				</div><!-- paging -->
+{% if is_paginated %}
+
+{% if page_obj.has_previous %}
+
+<a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+<a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+{% endif %}
+
+{% for num in page_obj.paginator.page_range %}
+{% if page_obj.number == num %}
+<a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+{% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+<a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+{% endif %}
+{% endfor %}
+
+{% if page_obj.has_next %}
+<a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+<a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+{% endif %}
+
+{% endif %}
+
 
 			</main>
 		</div>
