--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -4,8 +4,8 @@
 {% load static %}
 
 {% block title %}
-| {{post.title}}
-{% endblock%}
+{{blog.title}}
+{% endblock %}
 {% block content %}
 <div class="container-fluid blog-detail">
 	<div class="row">
