--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -7,7 +7,7 @@
 {% endblock%}
 
 {% block content%}
-<div class="container-fluid blog">
+<div class="container-fluslug blog">
 	<div class="row">
 		<div class="col-md-7 mx-auto">
 			<main class="py-3">
@@ -19,11 +19,11 @@
 					<div class="col-md-4">
 				
 						<div class="card border-0 bg-transparent">
-							<a href="{%url 'post-detail' post.id %}">
+							<a href="{%url 'post-detail' post.slug %}">
 								<img src="{{post.image.url}}" class="card-img-top">
 							</a>
 							<div class="card-body px-0">
-								<h5 class="card-title"><a href="{%url 'post-detail' post.id %}" class="text-dark text-decoration-none">{{post.title}}</a></h5>
+								<h5 class="card-title"><a href="{%url 'post-detail' post.slug %}" class="text-dark text-decoration-none">{{post.title}}</a></h5>
 								<p>{{post.excerpt}}</p>
 							</div>
 						</div>
