--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -10,7 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Meta Tag -->
-    <title>Skolaku</title>
+    <title> {% block title %}{% endblock %} Skolaku</title>
+
+
     <meta name="description" content="A description of the page" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
